--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://
 github_username:  lePetitProf
 
 # Build settings
-theme: immaculate
+theme: minima
 plugins:
   - jekyll-feed
 
